[gd_scene load_steps=5 format=3 uid="uid://c2325f4ds7rer"]

[ext_resource type="Script" uid="uid://w3dre4fmbc1b" path="res://scenes/bombardment_system/bomb.gd" id="1_rqjch"]
[ext_resource type="Texture2D" uid="uid://bnm0qn4tx5i2w" path="res://assets/2d/Barrel_1.png" id="2_hwptw"]
[ext_resource type="SpriteFrames" uid="uid://k76s15noqsxl" path="res://assets/explosions/explosions.tres" id="3_ew8my"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hwptw"]
radius = 18.0
height = 56.0

[node name="Bomb" type="RigidBody2D"]
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_rqjch")

[node name="hit_box" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hwptw")

[node name="bomb_sprite" type="Sprite2D" parent="."]
scale = Vector2(0.138718, 0.138718)
texture = ExtResource("2_hwptw")

[node name="explosion_anim" type="AnimatedSprite2D" parent="."]
scale = Vector2(3.17969, 3.17969)
sprite_frames = ExtResource("3_ew8my")
animation = &"explosion3"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="explosion_anim" to="." method="_on_explosion_anim_animation_finished"]
